force-app/main/default/objects/KnoxApproval__c/KnoxApproval__c.object-meta.xml
<CustomObject>
    <label>Knox Approval</label>
    <nameField>
        <label>Knox Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knox Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>