force-app/main/default/objects/KnoxApproval__c/fields/activitylogicialkey__c.field-meta.xml
<CustomField>
    <fullName>activitylogicialkey__c</fullName>
    <label>activity logicial key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>