force-app/main/default/objects/KnoxApproval__c/fields/ActivityTransactionName__c.field-meta.xml
<CustomField>
    <fullName>ActivityTransactionName__c</fullName>
    <formula>TEXT(OpportunityActivity__r.TransactionName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Transaction Name</label>
    <type>Text</type>
</CustomField>