force-app/main/default/objects/KnoxApproval__c/fields/ApprovalTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ApprovalTypeCode__c</fullName>
    <label>Approval Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>