force-app/main/default/objects/KnoxApproval__c/fields/ApprovedId__c.field-meta.xml
<CustomField>
    <fullName>ApprovedId__c</fullName>
    <label>ApprovedId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>