force-app/main/default/objects/KnoxApproval__c/fields/BizReview__c.field-meta.xml
<CustomField>
    <fullName>BizReview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy Committee</label>
    <referenceTo>Biz_Review__c</referenceTo>
    <relationshipLabel>Knox Approval</relationshipLabel>
    <relationshipName>KnoxApproval</relationshipName>
    <type>Lookup</type>
</CustomField>