force-app/main/default/objects/KnoxApproval__c/fields/BoActivityCode__c.field-meta.xml
<CustomField>
    <fullName>BoActivityCode__c</fullName>
    <label>Bo Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>