force-app/main/default/objects/KnoxApproval__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Submission cancellation comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>