force-app/main/default/objects/KnoxApproval__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>