force-app/main/default/objects/KnoxApproval__c/fields/ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTime__c</fullName>
    <label>ExecutionTime</label>
    <type>DateTime</type>
</CustomField>