force-app/main/default/objects/KnoxApproval__c/fields/HTML__c.field-meta.xml
<CustomField>
    <fullName>HTML__c</fullName>
    <label>HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>