force-app/main/default/objects/KnoxApproval__c/fields/MISID__c.field-meta.xml
<CustomField>
    <fullName>MISID__c</fullName>
    <description>Interface : ExternalKey 옵션 지정</description>
    <externalId>true</externalId>
    <label>MISID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>