force-app/main/default/objects/KnoxApproval__c/fields/objAPIName__c.field-meta.xml
<CustomField>
    <fullName>objAPIName__c</fullName>
    <label>objAPIName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>