force-app/main/default/objects/KnoxApproval__c/fields/ObjKey__c.field-meta.xml
<CustomField>
    <fullName>ObjKey__c</fullName>
    <label>ObjKey</label>
    <length>35</length>
    <type>Text</type>
</CustomField>