force-app/main/default/objects/KnoxApproval__c/fields/objRecordName__c.field-meta.xml
<CustomField>
    <fullName>objRecordName__c</fullName>
    <label>objRecordName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>