force-app/main/default/objects/KnoxApproval__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Knox Approval</relationshipLabel>
    <relationshipName>Knox_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>