force-app/main/default/objects/KnoxApproval__c/fields/Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code__c</fullName>
    <formula>Opportunity__r.OpportunityCode__c</formula>
    <label>Opportunity Code</label>
    <type>Text</type>
</CustomField>