force-app/main/default/objects/KnoxApproval__c/fields/OpportunityActivity__c.field-meta.xml
<CustomField>
    <fullName>OpportunityActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Activity</label>
    <referenceTo>Opportunity_Activity__c</referenceTo>
    <relationshipLabel>Knox Approval</relationshipLabel>
    <relationshipName>KnoxApproval</relationshipName>
    <type>Lookup</type>
</CustomField>