force-app/main/default/objects/KnoxApproval__c/fields/OriginKnoxApproval__c.field-meta.xml
<CustomField>
    <fullName>OriginKnoxApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>협업 법인 Original 결재</description>
    <inlineHelpText>협업 법인 Original 결재</inlineHelpText>
    <label>Origin Knox Approval</label>
    <referenceTo>KnoxApproval__c</referenceTo>
    <relationshipLabel>Knox Approval</relationshipLabel>
    <relationshipName>KnoxApproval</relationshipName>
    <type>Lookup</type>
</CustomField>