force-app/main/default/objects/KnoxApproval__c/fields/RequestBusinessLevel__c.field-meta.xml
<CustomField>
    <fullName>RequestBusinessLevel__c</fullName>
    <label>Request Business Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Level</valueSetName>
    </valueSet>
</CustomField>