force-app/main/default/objects/KnoxApproval__c/fields/syncFlag__c.field-meta.xml
<CustomField>
    <fullName>syncFlag__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <label>syncFlag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>