force-app/main/default/objects/KnoxApproval__c/fields/TEXTNO__c.field-meta.xml
<CustomField>
    <fullName>TEXTNO__c</fullName>
    <label>TEXTNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>