force-app/main/default/objects/KnoxApproval__c/fields/WFOBJECT__c.field-meta.xml
<CustomField>
    <fullName>WFOBJECT__c</fullName>
    <label>WFOBJECT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>