force-app/main/default/objects/KnoxApproval__c/recordTypes/Copy.recordType-meta.xml
<RecordType>
    <fullName>Copy</fullName>
    <active>true</active>
    <description>법인 최초 수주 품의 시 본사 이력 확인 및 I/F 호출을 위하여 복사한 결재 레코드 타입</description>
    <label>Copy</label>
</RecordType>