force-app/main/default/objects/KnoxApproval__c/recordTypes/Origin.recordType-meta.xml
<RecordType>
    <fullName>Origin</fullName>
    <active>true</active>
    <label>Origin</label>
</RecordType>